// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> disabled 1`] = `
<Fragment>
  <label
    htmlFor="radio0"
    key="radio0"
  >
    <input
      className=""
      defaultChecked={false}
      disabled={true}
      id="radio0"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="xl"
    />
    <span>
      XL
    </span>
  </label>
  <label
    htmlFor="radio1"
    key="radio1"
  >
    <input
      className=""
      defaultChecked={false}
      disabled={true}
      id="radio1"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="l"
    />
    <span>
      L
    </span>
  </label>
  <label
    htmlFor="radio2"
    key="radio2"
  >
    <input
      className=""
      defaultChecked={false}
      disabled={true}
      id="radio2"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="m"
    />
    <span>
      M
    </span>
  </label>
</Fragment>
`;

exports[`<RadioGroup /> renders 1`] = `
<Fragment>
  <label
    htmlFor="radio0"
    key="radio0"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio0"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="xl"
    />
    <span>
      XL
    </span>
  </label>
  <label
    htmlFor="radio1"
    key="radio1"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio1"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="l"
    />
    <span>
      L
    </span>
  </label>
  <label
    htmlFor="radio2"
    key="radio2"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio2"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="m"
    />
    <span>
      M
    </span>
  </label>
</Fragment>
`;

exports[`<RadioGroup /> with classnames 1`] = `
<Fragment>
  <label
    className="red"
    htmlFor="radio0"
    key="radio0"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio0"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="xl"
    />
    <span>
      XL
    </span>
  </label>
  <label
    className="red"
    htmlFor="radio1"
    key="radio1"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio1"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="l"
    />
    <span>
      L
    </span>
  </label>
  <label
    className="red"
    htmlFor="radio2"
    key="radio2"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio2"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="m"
    />
    <span>
      M
    </span>
  </label>
</Fragment>
`;

exports[`<RadioGroup /> with gap 1`] = `
<Fragment>
  <label
    htmlFor="radio0"
    key="radio0"
  >
    <input
      className="with-gap"
      defaultChecked={false}
      id="radio0"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="xl"
    />
    <span>
      XL
    </span>
  </label>
  <label
    htmlFor="radio1"
    key="radio1"
  >
    <input
      className="with-gap"
      defaultChecked={false}
      id="radio1"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="l"
    />
    <span>
      L
    </span>
  </label>
  <label
    htmlFor="radio2"
    key="radio2"
  >
    <input
      className="with-gap"
      defaultChecked={false}
      id="radio2"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="m"
    />
    <span>
      M
    </span>
  </label>
</Fragment>
`;

exports[`<RadioGroup /> with predefined value 1`] = `
<Fragment>
  <label
    htmlFor="radio0"
    key="radio0"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio0"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="xl"
    />
    <span>
      XL
    </span>
  </label>
  <label
    htmlFor="radio1"
    key="radio1"
  >
    <input
      className=""
      defaultChecked={true}
      id="radio1"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="l"
    />
    <span>
      L
    </span>
  </label>
  <label
    htmlFor="radio2"
    key="radio2"
  >
    <input
      className=""
      defaultChecked={false}
      id="radio2"
      name="size"
      onChange={[MockFunction]}
      type="radio"
      value="m"
    />
    <span>
      M
    </span>
  </label>
</Fragment>
`;
